// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InterventionBanner does not render when REACT_APP_INTERVENTION_BANNER is not set in config 1`] = `""`;

exports[`InterventionBanner does not render when REACT_APP_INTERVENTION_BANNER is set to null 1`] = `""`;

exports[`InterventionBanner renders with the content of REACT_APP_INTERVENTION_BANNER set in config (only message) 1`] = `
<div
  className="intervention-banner"
>
  <Alert
    banner={true}
    message={
      <React.Fragment>
        Maintenance in progress
      </React.Fragment>
    }
    showIcon={false}
    type="warning"
  />
</div>
`;

exports[`InterventionBanner renders with the content of REACT_APP_INTERVENTION_BANNER set in config 1`] = `
<div
  className="intervention-banner"
>
  <Alert
    banner={true}
    message={
      <React.Fragment>
        Maintenance in progress
        <React.Fragment>
          .
           
          <ExternalLink
            href="https://inspirehep.net"
          >
            More info
          </ExternalLink>
          .
        </React.Fragment>
      </React.Fragment>
    }
    showIcon={false}
    type="warning"
  />
</div>
`;
